SERVER-11943